test/tests/stages/5_local_variables/valid/short_circuit_and_fail.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[23]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(a)
  =
  const int(0)
  ;
  const int(0)
  &&
  (
  identifier(a)
  =
  const int(5)
  )
  ;
  return
  identifier(a)
  ;
  }
