test/tests/stages/5_local_variables/invalid_semantics/extra_credit/undeclared_prefix_incr.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[13]:
  int
  identifier(main)
  (
  void
  )
  {
  identifier(a)
  ++
  ;
  return
  const int(0)
  ;
  }
